# core_utils

./: .gitignore  README.md  package.yaml  pyproject.toml
core/: annotations.py  file.py  func.py  regex.py  size.py  structured.py  sysinfo.py  text.py
core_utils/: collector.py  env.py  exceptions.py  file.py  filesys.py  func.py  module.py  proc.py  regex.py  size.py  text.py
tests/: test_collector.py  test_env.py  test_file.py  test_func.py  test_proc.py  test_regex.py  test_size.py  test_structured.py  test_sysinfo.py  test_text.py
